<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/out"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxHeight="2dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/zero"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onClickNumber"
        android:text="@string/zero"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/dot"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:onClick="onClickNumber"
        android:text="@string/dot"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/equl"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_alignBottom="@+id/dot"
        android:layout_toRightOf="@+id/dot"
        android:onClick="onClickEqul"
        android:text="@string/equl"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/one"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/zero"
        android:layout_alignLeft="@+id/zero"
        android:onClick="onClickNumber"
        android:text="@string/one"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/two"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/zero"
        android:layout_toLeftOf="@+id/dot"
        android:onClick="onClickNumber"
        android:text="@string/two"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/three"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/dot"
        android:layout_toLeftOf="@+id/equl"
        android:onClick="onClickNumber"
        android:text="@string/three"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/four"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/one"
        android:layout_toLeftOf="@+id/two"
        android:onClick="onClickNumber"
        android:text="@string/four"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/five"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/two"
        android:layout_toLeftOf="@+id/three"
        android:onClick="onClickNumber"
        android:text="@string/five"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/six"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/equl"
        android:layout_toLeftOf="@+id/equl"
        android:onClick="onClickNumber"
        android:text="@string/six"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/nine"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/seven"
        android:layout_alignBottom="@+id/seven"
        android:layout_toRightOf="@+id/five"
        android:onClick="onClickNumber"
        android:text="@string/nine"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/seven"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/four"
        android:layout_alignLeft="@+id/four"
        android:onClick="onClickNumber"
        android:text="@string/seven"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/eight"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/five"
        android:layout_toLeftOf="@+id/six"
        android:onClick="onClickNumber"
        android:text="@string/eight"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/back"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/equl"
        android:layout_toRightOf="@+id/three"
        android:text="@string/back"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/add"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/six"
        android:layout_alignLeft="@+id/equl"
        android:onClick="onClickOpreator"
        android:text="@string/add"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/sub"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/nine"
        android:layout_toRightOf="@+id/nine"
        android:onClick="onClickOpreator"
        android:text="@string/sub"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/mul"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/nine"
        android:layout_toRightOf="@+id/eight"
        android:onClick="onClickOpreator"
        android:text="@string/mul"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/c"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/seven"
        android:layout_alignLeft="@+id/seven"
        android:onClick="onClickClear"
        android:text="@string/c"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/div"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_above="@+id/nine"
        android:layout_toLeftOf="@+id/nine"
        android:onClick="onClickOpreator"
        android:text="@string/div"
        android:textColor="#ffffff" />

</RelativeLayout>
